Please enter the commit message for your changes. Lines starting with '#' will be ignored, and an empty message aborts the commit.
On branch master
Changes to be committed:
	modified:   GEMM/Makefile
	modified:   GEMM/src/GetPlatform.cpp
	modified:   GEMM/src/main.cpp

--- a/GEMM/Makefile
+++ b/GEMM/Makefile
@@ -9,7 +9,8 @@ cflags   +=-std=c++17 -fopenmp -O3
 $(Target):$(object)
 	$(compiler) $^ -o $@ -lOpenCL -fopenmp 
 
-$(ObjDir)/%.o:./src/%.cpp 
+$(ObjDir)/%.o:./src/%.cpp
+	@mkdir -p $(ObjDir)
 	$(compiler) -c $(cflags) $< -o $@ -I./include
 
 .PHONY:clean
