Please enter the commit message for your changes. Lines starting with '#' will be ignored, and an empty message aborts the commit.
On branch master
Changes to be committed:
	modified:   Convolution/.vscode/settings.json
	modified:   Convolution/Makefile
	new file:   Convolution/bin/Event
	new file:   Convolution/include/InstanceTemplate.hpp
	new file:   Convolution/include/convolution.hpp
	modified:   Convolution/include/opencl_step.hpp
	new file:   Convolution/obj/BuildProgram.o
	new file:   Convolution/obj/CreateCommadQueue.o
	new file:   Convolution/obj/CreateContext.o
	new file:   Convolution/obj/CreateKernel.o
	new file:   Convolution/obj/CreateProgram.o
	new file:   Convolution/obj/GetDeviceInfo.o
	new file:   Convolution/obj/GetPlatform.o
	new file:   Convolution/obj/GetPlatformInfo.o
	new file:   Convolution/obj/ParseKernelFromSource.o
	new file:   Convolution/obj/ReadKernelSource.o
	new file:   Convolution/obj/main.o
	modified:   Convolution/opencl/convolution.cl
	new file:   Convolution/src/ParseKernelFromSource.cpp
	modified:   Convolution/src/main.cpp

Changes not staged for commit:
	deleted:    Convolution/bin/Event
	deleted:    Convolution/obj/BuildProgram.o
	deleted:    Convolution/obj/CreateCommadQueue.o
	deleted:    Convolution/obj/CreateContext.o
	deleted:    Convolution/obj/CreateKernel.o
	deleted:    Convolution/obj/CreateProgram.o
	deleted:    Convolution/obj/GetDeviceInfo.o
	deleted:    Convolution/obj/GetPlatform.o
	deleted:    Convolution/obj/GetPlatformInfo.o
	deleted:    Convolution/obj/ParseKernelFromSource.o
	deleted:    Convolution/obj/ReadKernelSource.o
	deleted:    Convolution/obj/main.o

--- a/Convolution/Makefile
+++ b/Convolution/Makefile
@@ -4,6 +4,7 @@ ObjDir   	=./obj
 Target   	=./bin/Event
 source   	=$(foreach dir,$(SrcDir),$(wildcard $(dir)/*.cpp))
 object   	=$(patsubst %.cpp,$(ObjDir)/%.o,$(notdir $(source)))
+headfile 	=$(wildcard ./include/*.hpp)
 cflags   	+=-std=c++20  -O3
 NO_COLOR    =\033[0m
 OK_COLOR    =\033[32;01m
@@ -16,7 +17,7 @@ $(Target):$(object)
 	@printf "$(OK_COLOR) OpenCL executable file $(Target) has been created\n$(NO_COLOR)" 
 
 
-$(ObjDir)/%.o:./src/%.cpp
+$(ObjDir)/%.o:./src/%.cpp $(headfile)
 	@mkdir -p $(ObjDir)
 	$(compiler) -c $(cflags) $< -o $@ -I./include
 
