--- a/Convolution/.vscode/settings.json
+++ b/Convolution/.vscode/settings.json
@@ -60,6 +60,11 @@
         "thread": "cpp",
         "typeindex": "cpp",
         "typeinfo": "cpp",
-        "__nullptr": "cpp"
+        "__nullptr": "cpp",
+        "strstream": "cpp",
+        "complex": "cpp",
+        "list": "cpp",
+        "cfenv": "cpp",
+        "cinttypes": "cpp"
     }
 }
