Please enter the commit message for your changes. Lines starting with '#' will be ignored, and an empty message aborts the commit.
On branch master
Changes to be committed:
	modified:   Convolution/Makefile
	new file:   Convolution/bin/Event
	modified:   Convolution/include/opencl_step.hpp
	new file:   Convolution/obj/BuildProgram.o
	new file:   Convolution/obj/CreateCommadQueue.o
	new file:   Convolution/obj/CreateContext.o
	new file:   Convolution/obj/CreateKernel.o
	new file:   Convolution/obj/CreateProgram.o
	new file:   Convolution/obj/GetDeviceInfo.o
	new file:   Convolution/obj/GetPlatform.o
	new file:   Convolution/obj/GetPlatformInfo.o
	new file:   Convolution/obj/ParseKernelFromSource.o
	new file:   Convolution/obj/ReadKernelSource.o
	new file:   Convolution/obj/main.o
	new file:   GEMM_2/.clang-format
	new file:   GEMM_2/.vscode/c_cpp_properties.json
	new file:   GEMM_2/.vscode/settings.json
	new file:   GEMM_2/Makefile
	new file:   GEMM_2/include/Gemm.hpp
	new file:   GEMM_2/include/GetDeviceInfo.hpp
	new file:   GEMM_2/include/GetPlatformInfo.hpp
	new file:   GEMM_2/include/InstanceTemplate.hpp
	new file:   GEMM_2/include/opencl.hpp
	new file:   GEMM_2/include/opencl_step.hpp
	new file:   GEMM_2/opencl/gemm.cl
	new file:   GEMM_2/src/BuildProgram.cpp
	new file:   GEMM_2/src/CreateCommadQueue.cpp
	new file:   GEMM_2/src/CreateContext.cpp
	new file:   GEMM_2/src/CreateKernel.cpp
	new file:   GEMM_2/src/CreateProgram.cpp
	new file:   GEMM_2/src/GetDeviceInfo.cpp
	new file:   GEMM_2/src/GetPlatform.cpp
	new file:   GEMM_2/src/GetPlatformInfo.cpp
	new file:   GEMM_2/src/ParseKernelFromSource.cpp
	new file:   GEMM_2/src/ReadKernelSource.cpp
	new file:   GEMM_2/src/main.cpp

--- a/GEMM_2/Makefile
+++ b/GEMM_2/Makefile
@@ -1,11 +1,11 @@
 compiler 	=g++
 SrcDir   	=./src 
 ObjDir   	=./obj
-Target   	=./bin/Event
+Target   	=./bin/gemm
 source   	=$(foreach dir,$(SrcDir),$(wildcard $(dir)/*.cpp))
 object   	=$(patsubst %.cpp,$(ObjDir)/%.o,$(notdir $(source)))
 headfile 	=$(wildcard ./include/*.hpp)
-cflags   	+=-std=c++17  -O3  -fno-tree-vectorize   -mavx512f -mavx2 -fopenmp
+cflags   	+=-std=c++17  -O3  -fno-tree-vectorize  -mavx2 -mfma
 NO_COLOR    =\033[0m
 OK_COLOR    =\033[32;01m
 
@@ -13,7 +13,7 @@ all:$(Target) $(Target_cpu)
 
 $(Target):$(object)
 	@mkdir -p ./bin
-	$(compiler) $^ -o $@ -lOpenCL  -fopenmp
+	$(compiler) $^ -o $@ -lOpenCL 
 	@printf "$(OK_COLOR) OpenCL executable file $(Target) has been created\n$(NO_COLOR)" 
 
 
